--- a/client/src/components/nav.css
+++ b/client/src/components/nav.css
@@ -4,6 +4,9 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: black;
+    padding: 10px;
+    border-radius: 5px;
 }
 
 .container-logo {
@@ -17,7 +20,18 @@ nav {
     border-radius: 100%;
     /* animation: bounce 4s infinite alternate; */
 }
-
+.form{
+    margin-top: 42px;
+    width: 100px;
+    height: 30px;
+    border-radius: 8px;
+    border: none;
+    margin-left: 40px;
+    margin-right: 30px;
+    font-size: 15px;
+    font-weight: bold;
+    cursor: pointer;
+}
 @keyframes bounce {
     0% {
       transform: translateY(0); /* Estado inicial */
