--- a/client/src/components/Card.css
+++ b/client/src/components/Card.css
@@ -1,22 +1,23 @@
-
-
-
 .container-cards-drivers {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 60px;
+    margin-top: 5%;
+    margin-left: 3%;
 }
 
 .driver-card {
     text-align: center;
-    width: 400px;
-    height: 570px;
-    margin-top: 150px;
-    background-color: rgb(143, 136, 136);
+    width: 350px;
+    height: auto;
+    /* background-color: rgb(143, 136, 136); */
+    background-color: rgba(225, 224, 224, 0.1);
     border-radius: 15px;
-    margin-left: 50px;
     cursor: pointer;
     transition: 0.3s;
+    backdrop-filter: blur(10px);
 }
+
 
 .driver-card:hover {
     transform: scale(1.05);
@@ -25,8 +26,6 @@
 .img-driver {
     width: 300px;
     height: 400px;
-    /* border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px; Solo para la parte de abajo de la imagen */
     border-radius: 10px;
 }
 
