--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -1,4 +1,37 @@
-img {
-    width: 300px;
-    height: 300px;
+body {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;;
+}
+
+.container-background-landing {
+    width: 100%;
+    height: 100vh;
+    background-image: url("./public/f1-background.jpg");
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-attachment: fixed;
+	background-size: cover;
+}
+
+.button-iniciar {
+    width: 100px;
+    position: relative;
+    top: 75%;
+    left: 47%;
+    font-size: 25px;
+    font-weight: bold;
+    padding: 10px;
+    border: none;
+    background-color: #cf1900;
+    box-shadow: 0px 15px 10px #3a161a;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+
+.button-iniciar:hover {
+    transform: scale(1.1);
 }
