--- a/client/src/components/form.css
+++ b/client/src/components/form.css
@@ -1,53 +1,91 @@
+body {
+  margin: 0;
+
+}
+
+.container-crear-driver {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to right, #15151f 35%, #851000 90%);
+}
+
 .form-container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-    color: black;
-  }
-  
-  .form-container label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  .form-container input[type="text"],
-  .form-container input[type="url"],
-  .form-container textarea {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .form-container textarea {
-    resize: vertical; /* Permite redimensionar verticalmente */
-  }
-  
-  .form-container button[type="submit"] {
-    width: 100%;
-    padding: 10px;
-    background-color: #4caf50;
-    color: rgb(0, 0, 0);
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .form-container button[type="submit"]:hover {
-    background-color: #45a049;
-  }
-  
-  /* Estilos adicionales para la disposición de los elementos */
-  .form-container > div {
-    margin-bottom: 15px;
-  }
-  
-  .form-container > div:last-child {
-    margin-bottom: 0;
-  }
+  width: 400px;
+  height: auto;
+  margin: 0px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: rgba(225, 224, 224, 0.1);
+  backdrop-filter: blur(10px);
+}
+
+.form-original {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-original div {
+  margin-bottom: 10px;
+}
+
+.form-original label {
+  font-weight: bold;
+}
+
+.form-original input,
+.form-original input,
+.form-original textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 4px;
+  resize: none;
+}
+
+.form-original button {
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form-original button:hover {
+  transform: scale(1.1);
+}
+
+.container-button-crear {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.button-crear-driver {
+  font-size: 18px;
+  font-weight: bold;
+  padding: 10px;
+  border: none;
+  background-color: #cf1900;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+
+.texto-creado {
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+
+.texto-creado {
+  font-weight: bold;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: rgba(225, 224, 224, 0.1);
+  backdrop-filter: blur(10px);
+}
   
