--- a/client/src/components/form.css
+++ b/client/src/components/form.css
@@ -5,7 +5,7 @@ body {
 
 .container-crear-driver {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: linear-gradient(to right, #15151f 35%, #851000 90%);
 }
 
@@ -70,7 +70,11 @@ body {
   border: none;
   background-color: #cf1900;
   border-radius: 10px;
-  transition: 0.3s;
+  transition: 0.3s ease-in-out;
+}
+
+.button-crear-driver:hover{
+  background-color: #000000;
 }
 
 .texto-creado {
@@ -89,3 +93,42 @@ body {
   backdrop-filter: blur(10px);
 }
   
+.button-eliminar{
+  position: fixed;
+  top: 5px;
+  right: 10px;
+  padding: 7px;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  transition: 0.3s;
+}
+
+.button-eliminar:hover{
+  background-color: #000000;
+  scale: 1.2;
+  border-radius: 5px;
+}
+
+.icon-volver-form {
+  font-size: 32px;
+}
+
+.buton-volver-form {
+  position: fixed;
+  top: 5px;
+  background-color: transparent;
+  border: none;
+  transition: 0.2s;
+  cursor: pointer;
+}
+
+.buton-volver-form:hover {
+  transform: scale(1.07);
+}
+
+.container-buttons-form {
+  display: flex;
+  justify-content: space-between;
+  /* background-color: red; */
+}
